# melid

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: black.yml  changelog.yaml  greetings.yaml  greetings.yml  publish.yaml  publish.yml  pypi-build.yml  release.yml
docs/: processor.md  resources.md
examples/basic/: context.py  main.py  style.css  style.qss
examples/builder/: main.py  style.css
examples/css_processor/: main.py  style.css
examples/store/: main.py
examples/tailwind/: main.py
melid/: app.py  layout.py  processors.py  router.py  store.py  types.py  utils.py  widget.py  widgets.py
melid/base/: app.py  processors.py  widget.py
melid/router/: view.py
melid/tailwind/: __init__.py  color.py  css_ast.py  size.py  utils.py
melid/tailwind/configs/: color.py
melid/tailwind/utilities/: __init__.py  color.py  size.py  variants.py
